# craftgraph

./: .flake8  .gitignore  README.md  mkdocs.yml  pyproject.toml
.run/: Render Graphviz.run.xml  Render Plotly.run.xml  Run Game.run.xml
data/: knowledge_graph.json
docs/: code_map.md  completed_tasks.md  conventions.md  index.md  mvp_plan.md  next_step.md  overview.md  todos.md
docs/conventions/: coding.md  documentation.md  project.md
docs/project/: completed_tasks.md  conventions.md  current_status.md  overview.md
src/: crafting_manager.py  display_graph.py  display_graph_graphviz.py  display_graph_igraph.py  display_graph_matplotlib.py  display_graph_plotly.py  display_graph_pygraphviz.py  game.py  game_interface.py  interfaces.py  knowledge_graph_parser.py  logger.py  render_graphviz.py  render_plotly.py  resource_manager.py
tests/: test_game.py  test_game_interface.py  test_knowledge_graph_parser.py  test_resource_manager.py
