[tool.poetry]
name = "CraftGraph"
version = "0.1.0"
description = "A game about crafting and graph theory"
license = "MIT"
authors = ["Sam Biggins <sambiggins@gmail.com>"]
readme = "README.md"
repository = "https://github.com/smileynet/CraftGraph"
package-mode = false

[tool.poetry.scripts]
game = "src.game:main"
graphviz = "src.graphviz:main"
plotly = "src.plotly:main"
tests = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E266", "E501", "E701", "W503"]
plugins = ["flake8-pytest-style"]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
networkx = "^3.3"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
graphviz = "^0.20.3"
black = {extras = ["d"], version = "^24.8.0"}
flake8-bugbear = "^24.8.19"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.33"
pytest = "^8.3.2"
flake8-pytest-style = "^2.0.0"
black = "^24.8.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
