[tool.poetry]
name = "CraftGraph"
version = "0.1.0"
description = "A game about crafting and graph theory"
license = "MIT"
authors = ["Sam Biggins <sambiggins@gmail.com>"]
readme = "README.md"
repository = "https://github.com/smileynet/CraftGraph"
package-mode = false

[tool.poetry.scripts]
game = "src.game:main"
graphviz = "src.graphviz:main"
plotly = "src.plotly:main"
tests = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
networkx = "^3.3"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
